# HomeCreditDefaultRisk

./: .gitignore  .gitmodules  341.ipynb  Dockerfile  Readme.md  docker-compose.yml  export.py  publish.sh  pyproject.toml
Draft/: feature_builder_v2.py
Notebooks/: 1.0_Summary.ipynb  2.0_Model.ipynb  4.0_Appendices.ipynb  4.1_Tuning.ipynb  4.2_All_Models.ipynb  4.3_EDA.ipynb  4.4_All_Features.ipynb  4.5_RejectedApproaches.ipynb  Appendices_all_Models.ipynb  EDA.ipynb  EDA_appendices.ipynb  FeatureEngineering.ipynb  LGBM_d_v4_submission.csv  LGBM_dart_v5_submission.csv  LGBM_v3_submission.csv  Model.ipynb  Model_2.ipynb  Model_OLD.ipynb  Tuning.ipynb  Tuning_2.ipynb  styled_dataframe.html
Notebooks/.production_models/: BaselelineOnlyCreditRatings.dill
Notebooks/.tuning_results/: BaselelineOnlyCreditRatings.dill  LGBMDTuneAUC_Full_DropLowImp.dill  LGBMDartTuneAUC_Full_DS.dill  LGBMTuneAUC_Base_DS.dill  LGBMTuneAUC_Full_DS.dill  LGBMTuneAUC_Full_DS_DropLowImp.dill  LGBMTuneAUC_Full_DS_Drop_Ratings.dill  LGBMTuneWeightedLogLoss_Full_DS.dill  LGBM_AUC_Base_Features.dill  TEST_LOG_LOSS_BaselelineOnlyCreditRatings.dill
Notebooks/data/: results_all_models_test.csv  results_all_models_validation.csv
api/: input_model_mapper.py  main.py  model_builder.py  requirements.txt
src_draft/: load_dataset.py  utils.py
