[tool.poetry]
name = "ppuodz-ml-4-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ppuodz_ml"}]

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
